test: step2 테스트